syntax = "proto3";

package SEP3_T1_BlazorUI.Infrastructure;

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}

message RegisterRequest {
  string username = 1;
  string password = 2;
  Role role = 3;
}

message UserDTO {
  string username = 1;
  string userid = 2;
  Role role = 3;
}

service AuthService {
  rpc login(LoginRequest) returns (LoginResponse) {};

  rpc register(RegisterRequest) returns (UserDTO) {};
}

enum Type {
  FANTASY = 0;
  AUTOBIOGRAPHY = 1;
  HISTORY = 2;
}

enum Role {
  InventoryManager = 0;
  WarehouseWorker = 1;
}